force-app/main/default/objects/Case_Request__c/Case_Request__c.object-meta.xml
<CustomObject>
    <description>Case Request é um objeto customizado utilizado para registrar pedido ao setor de suporte. Neste objeto podemos gerenciar os pedidos de forma mais organizada, possuindo campos personalizados específicos para este fim.</description>
    <label>Case Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Case Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>