force-app/main/default/objects/Case_Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Campo que armazena o email do contato do caso.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>