force-app/main/default/objects/Case_Request__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Campo que armazena o Phone do contato do caso.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>