force-app/main/default/objects/Case_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Este é o campo de descrição do nosso case request. Nesse campo de descrição deve ser descrito todas as informações necessárias referente a solicitação para o suporte.</description>
    <inlineHelpText>Descreva com mais detalhes sua solicitação.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>