force-app/main/default/objects/Case_Request__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Campo para registrar as informações de resolução e observações feitas pela equipe de suporte.</description>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>