force-app/main/default/objects/Case_Request__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <description>Data e hora limite para cumprimento do SLA definido para o caso.</description>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>