force-app/main/default/objects/Case_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Esse campo é referente ao assunto do case request, deve ser salvo nele um texto referente ao assunto da solicitação ao suporte.</description>
    <inlineHelpText>Informe qual é o assunto da sua solicitação.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>