force-app/main/default/objects/Case_Request__c/recordTypes/Support_Premium.recordType-meta.xml
<RecordType>
    <fullName>Support_Premium</fullName>
    <active>true</active>
    <description>Record type para usuários com permissão de Support Premium</description>
    <label>Support Premium</label>
</RecordType>