force-app/main/default/objects/Case_Request__c/recordTypes/Support_Standard.recordType-meta.xml
<RecordType>
    <fullName>Support_Standard</fullName>
    <active>true</active>
    <description>Record type para usuários com permissão de Support Standard</description>
    <label>Support Standard</label>
</RecordType>