force-app/main/default/objects/Case_Request__c/validationRules/Case_Reopen_Permission_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Reopen_Permission_Validation</fullName>
    <active>true</active>
    <description>Apenas usuários com a permissão para reabrir o case podem reabrir.</description>
    <errorConditionFormula>AND(
  ISCHANGED( Status__c ),
  NOT(ISPICKVAL( Status__c , &apos;Closed&apos;)),
  NOT($Permission.canReopenCaseRequest)
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para reabrir um caso.</errorMessage>
</ValidationRule>