force-app/main/default/objects/Case_Request__c/validationRules/Require_ResolutionNotes_Before_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_ResolutionNotes_Before_Close</fullName>
    <active>true</active>
    <description>Exige que o campo Resolution Notes esteja preenchido antes de fechar o case.</description>
    <errorConditionFormula>AND (
 ISPICKVAL( Status__c , &apos;Closed&apos;),
 ISBLANK(  Resolution_Notes__c ) 
)</errorConditionFormula>
    <errorMessage>Por favor, preencha o campo &apos;Resolution Notes&apos; antes de fechar o caso.</errorMessage>
</ValidationRule>