force-app/main/default/objects/Case_Request__c/listViews/Opened_Cases.listView-meta.xml
<ListView>
    <fullName>Opened_Cases</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>SLA_Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Opened Cases</label>
</ListView>