force-app/main/default/objects/Case_Request__c/listViews/Support_Premium_Queue_Case_Request.listView-meta.xml
<ListView>
    <fullName>Support_Premium_Queue_Case_Request</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>SLA_Deadline__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Support Premium Queue</label>
    <queue>Support_Premium_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>