force-app/main/default/objects/Case_Request__c/listViews/Support_Standard_Queue_Case_Request.listView-meta.xml
<ListView>
    <fullName>Support_Standard_Queue_Case_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Standard Queue</label>
    <queue>Support_Standard_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>